Make options checkboxes, pretty it up

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -6,3 +6,11 @@ ol#steps {
     list-style-position: inside;
     margin-top: 100px;
 }
+
+ol#steps li {
+    text-align: left;
+}
+
+.form-horizontal .control-label {
+    text-align: left;
+}
